Fixed text overflow in description box

--- a/src/sections/events-page/Events.module.css
+++ b/src/sections/events-page/Events.module.css
@@ -1,7 +1,7 @@
 .events{
     display: flex;
     flex-flow: row wrap;
-    background-color: coral;
+    /* background-color: coral; */
     background-size: cover;
     justify-content: center;
 }
